# underpass-detection-experiments

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  PolygonExtruder.cpp  PolygonExtruder.h  README.md  build.zig  build.zig.zon  flake.nix  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
3DBAG_underpass_heights/: README.md  gelderseplein.off  requirements.txt
crop_las_by_polygons/: README.md  build.zig  flake.nix
detection_2d/: README.md  osm_streets_download.py  underpasses.sql
edge-classification/: .env.example  README.md  pyproject.toml
edge-classification/scripts/: classify_all_edges.py
edge-classification/src/edge_classification/: __init__.py  edge_classifier.py  geometry_ops.py  postgis.py
edge-classification/tests/: __init__.py  test_edge_classifier.py  test_geometry_ops.py
edge-extension/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
edge-offset/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
edge-offset/docs/: implementation-notes.md  implementation-plan.md
edge-offset/scripts/: edges_single.sql  export_edge_fixtures.sh  export_offset_polygons.py  offset_all_polygons.py  underpasses_single.sql
edge-offset/src/edge_offset/: __init__.py  geojson.py  linework.py  offset_linework.py  polygon_ops.py  postgis.py  rings.py
edge-offset/tests/: test_geojson.py  test_linework_classification.py  test_offset_linework.py  test_polygon_ops.py  test_postgis.py  test_regression_offset_linework.py
edge-offset/tests/data/: exterior_edges.geojson  exterior_one.geojson  interior_one.geojson  pand_0363100012165490_poly_118_fixed.geojson  pand_0363100012165490_poly_118_movable.geojson  pand_0363100012165490_poly_119_fixed.geojson  pand_0363100012165490_poly_119_movable.geojson  polygon.geojson  spike_1.geojson  spike_2.geojson
edge-offset/tests/data/regression/: NL.IMBAG.Pand.0363100012084610.geojson  NL.IMBAG.Pand.0363100012111986.geojson  NL.IMBAG.Pand.0363100012165684.geojson  NL.IMBAG.Pand.0363100012182123.geojson  NL.IMBAG.Pand.0437100000007755.geojson  NL.IMBAG.Pand.0606100000012670.geojson  NL.IMBAG.Pand.0637100000157787.geojson  NL.IMBAG.Pand.0637100000164662.geojson  NL.IMBAG.Pand.0637100000303797.geojson
height_from_streetlidar/: README.md  cases.py  estimate_heights.py  flake.nix  height_estimation.py  merge_underpass_h_into_gpkg.py  plot_z_histogram.py  underpass_heights.csv
inspector/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
intersection-3d/: vcpkg.json
modelling_3d/: .gitignore  README.md  build.zig  build.zig.zon  flake.nix  justfile
sample_data/: house.ply  underpass.ply
src/: OGRVectorReader.cpp  OGRVectorReader.h  PolygonExtruder.h  main.cpp
tests/: README.md  (+11 more)
underpass_detection_2d/: .env.example  .gitignore  README.md  pyproject.toml
underpass_detection_2d/scripts/: detect_underpasses.py
underpass_detection_2d/src/underpass_detection_2d/: __init__.py  geometry_ops.py  pipeline.py  postgis.py
underpass_detection_2d/tests/: test_geometry_ops.py  test_pipeline.py
(+161 files in other folders)
