[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "edge-offset"
version = "0.1.0"
description = "Small library for reading GeoJSON polygon data and offsetting selected polygon edges."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary]>=3.2.6",
  "shapely>=2.1.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/edge_offset"]

[tool.pytest.ini_options]
testpaths = ["tests"]
