[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "underpass-detection-2d"
version = "0.1.0"
description = "Detect underpass geometries by comparing BAG and BGT building polygons using 2D spatial operations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary]>=3.2.6",
  "shapely>=2.1.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/underpass_detection_2d"]

[tool.pytest.ini_options]
testpaths = ["tests"]
